# i2pr

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GUARDRAILS.md  README.md  check_ri.sh  deny.toml  rebuild.sh  rust-toolchain.toml  wrap.sh
.agents/skills/: i2pr-ntcp2-interop
.cargo/: config.toml
.github/workflows/: ci.yml  ntcp2-interop-rootless.yml  ntcp2-interop-ubuntu.yml
crates/i2pr-core/: Cargo.toml
crates/i2pr-crypto/: Cargo.toml
crates/i2pr-crypto/src/: lib.rs
crates/i2pr-daemon/: Cargo.toml
crates/i2pr-daemon/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
crates/i2pr-daemon/tests/: cli.rs
crates/i2pr-proto/: Cargo.toml
crates/i2pr-proto/src/: codec.rs  common.rs  i2np.rs  i2np_impl.rs  lib.rs
crates/i2pr-proto/src/common/: certificate.rs  date.rs  hash.rs  identity.rs  keys.rs  lease.rs  mapping.rs  mod.rs  router_address.rs  router_info.rs
crates/i2pr-proto/src/i2np/: deferred.rs  delivery.rs  header.rs  message.rs  mod.rs  netdb.rs  tunnel.rs
crates/i2pr-proto/tests/: i2np_fixtures.rs
crates/i2pr-runtime/: Cargo.toml
crates/i2pr-runtime/src/: cancel.rs  channel.rs  context.rs  graph.rs  lib.rs  ntcp2_driver.rs  ntcp2_link.rs  ntcp2_runtime.rs  observability.rs  supervisor.rs
crates/i2pr-storage/: Cargo.toml
crates/i2pr-storage/src/: lib.rs
crates/i2pr-testkit/: Cargo.toml
crates/i2pr-testkit/src/: clock.rs  faults.rs  lib.rs  network.rs  ntcp2.rs  peers.rs  rng.rs  transport.rs
crates/i2pr-testkit/tests/: milestone_2.rs  milestone_3.rs  ntcp2_handshake.rs
crates/i2pr-transport/: Cargo.toml
crates/i2pr-transport-ntcp2/: Cargo.toml
crates/i2pr-transport-ntcp2/src/: address.rs  block.rs  constants.rs  crypto.rs  frame.rs  handshake.rs  lib.rs  state_machine.rs
crates/i2pr-transport-ntcp2/tests/: handshake.rs
crates/i2pr-transport/src/: delivery.rs  identity.rs  lib.rs  lifecycle.rs  manager.rs  payload.rs  resource.rs  snapshot.rs  tests.rs  types.rs
crates/i2pr-transport/tests/: contracts.rs
docs/: architecture.md  private-testnet.md  protocol-support.md  security-model.md
docs/adr/: 0000-adr-process.md  0001-modular-monolith.md  0002-tokio-runtime-boundary.md  0003-bounded-supervised-services.md  0004-router-identity-algorithms.md  0005-crypto-dependency-selection.md  0006-private-identity-storage.md  0007-explicit-identity-first-run.md  0008-runtime-supervision-and-cancellation.md  0009-runtime-observability-and-validation.md  0010-transport-contracts-and-crate-boundaries.md  0011-ntcp2-crypto-and-static-key-storage.md  0012-ntcp2-handshake-state-machines.md  0013-ntcp2-data-phase-and-blocks.md  0014-ntcp2-runtime-link-manager-and-address-policy.md  0015-ubuntu-reference-router-harness.md  0016-ubuntu-build-system-interop-gates.md  0017-rootless-sealed-namespace-interop-evidence.md  0018-multipass-rootless-interop-environment.md  0019-guest-level-nft-marker-clarification.md
docs/architecture/: dependency-graph.md  i2pr-core.md  i2pr-crypto.md  i2pr-daemon.md  i2pr-proto.md  i2pr-runtime.md  i2pr-storage.md  i2pr-testkit.md  i2pr-transport-ntcp2.md  i2pr-transport.md  interop-apparatus.md  overview.md  tooling.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/: metadata.toml
fuzz/corpus/certificate/: seed-oversized-shape
fuzz/corpus/destination/: seed-oversized-shape
fuzz/corpus/i2np_short_ssu/: seed-oversized-shape
fuzz/corpus/i2np_short_transport/: seed-oversized-shape
fuzz/corpus/i2np_standard/: seed-oversized-shape
fuzz/corpus/key_and_cert/: seed-oversized-shape
fuzz/corpus/key_certificate/: seed-oversized-shape
fuzz/corpus/lease/: seed-oversized-shape
fuzz/corpus/lease_set/: seed-oversized-shape
fuzz/corpus/mapping/: seed-oversized-shape
fuzz/corpus/router_address/: seed-oversized-shape
fuzz/corpus/router_identity/: seed-oversized-shape
fuzz/corpus/router_info/: seed-oversized-shape
fuzz/fuzz_targets/: certificate.rs  date.rs  date32.rs  destination.rs  hash.rs  i2np_bodies.rs  i2np_short_ssu.rs  i2np_short_transport.rs  i2np_standard.rs  key_and_cert.rs  key_certificate.rs  lease.rs  lease_set.rs  mapping.rs  ntcp2_blocks.rs  ntcp2_frames.rs  ntcp2_handshake.rs  ntcp2_storage.rs  ntcp2_transcript.rs  router_address.rs  router_identity.rs  router_info.rs  support.rs
plans/: 000-mvp-roadmap.md  001-closure.md  001-preplan-workspace-skeleton.md  002-milestone-0-corrective-closure.md  010-milestone-1-closure.md  010-milestone-1-overview.md  011-closure.md  011-m1-codec-foundation.md  012-closure.md  012-m1-common-structures.md  013-closure.md  013-m1-identity-crypto-storage.md  014-closure.md  014-m1-i2np-evidence-fuzzing-closure.md  015-m1-corrective-closure.md  020-milestone-2-closure.md  020-milestone-2-overview.md  021-closure.md  021-m2-supervision-cancellation.md  022-closure.md  022-m2-bounded-channels-resource-governor.md  023-closure.md  023-m2-deterministic-network-testkit.md  024-m2-observability-validation-closure.md  025-closure.md  025-m2-targeted-corrective-closure.md  030-milestone-3-closure.md  030-milestone-3-overview.md  031-closure.md  031-m3-transport-contracts-and-crate-boundaries.md  032-closure.md  032-m3-ntcp2-crypto-transcript-and-vectors.md  033-closure.md  033-m3-ntcp2-handshake-state-machines.md  034-closure.md  034-m3-ntcp2-data-phase-and-blocks.md  035-closure.md  035-m3-runtime-link-manager-and-addresses.md  036-closure.md  036-m3-interoperability-adversarial-validation-closure.md  (+32 more)
scripts/: check-dependency-direction.sh  check-fixture-manifest.sh  check-multipass-interop-boundary.sh  check-ntcp2-interoperability.sh  check-ntcp2-vectors.sh  check-rootless-interop-boundary.sh  check-runtime-boundaries.sh  fuzz-smoke.sh
scripts/interop/: aggregate-evidence.py  build-i2pd.sh  build-java-i2p.sh  build-references.sh  cache-manifest.py  cleanup.sh  offline-reuse.sh  probe-rootless-sandbox.sh  reset-lane-state.sh  rootless-enter.sh  run-gate.sh  run-matrix.sh  run-scenario.sh  (+5 more)
specs/: CONFORMANCE.md  IMPLEMENTATIONS.md  README.md  SOURCES.md  support.toml
tools/i2pr-interop/: Cargo.toml
tools/i2pr-interop/src/: main.rs  scenario.rs  status.rs
(+160 files in other folders)
