[workspace]
members = [
    "crates/i2pr-proto",
    "crates/i2pr-core",
    "crates/i2pr-daemon",
    "crates/i2pr-testkit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/dbowm91/i2pr"

[workspace.dependencies]
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
rand_chacha = "0.9"
rand_core = "0.10"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_code = "deny"
unexpected_cfgs = "deny"
unused_must_use = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[profile.dev]
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.release]
panic = "unwind"
lto = false
