[workspace]
members = [
    "crates/i2pr-crypto",
    "crates/i2pr-proto",
    "crates/i2pr-core",
    "crates/i2pr-daemon",
    "crates/i2pr-runtime",
    "crates/i2pr-storage",
    "crates/i2pr-testkit",
    "crates/i2pr-transport",
    "crates/i2pr-transport-ntcp2",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/dbowm91/i2pr"

[workspace.dependencies]
aes = { version = "0.8.4", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
ed25519-dalek = { version = "2.2", default-features = false, features = ["std", "zeroize"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
hmac = { version = "0.12.1", default-features = false }
rand_chacha = "0.9"
rand_core = { version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
siphasher = { version = "1.0.3", default-features = false }
subtle = { version = "2.6", default-features = false }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.48", default-features = false, features = ["io-util", "macros", "net", "rt", "sync", "time", "test-util"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"
unexpected_cfgs = "deny"
unused_must_use = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[profile.dev]
overflow-checks = true

[profile.test]
overflow-checks = true

[profile.release]
panic = "unwind"
lto = false
