[package]
name = "i2pr-transport-ntcp2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Tokio-free NTCP2 cryptographic foundation and protocol composition"
publish = false

[dependencies]
aes.workspace = true
chacha20poly1305.workspace = true
hmac.workspace = true
i2pr-crypto = { path = "../i2pr-crypto" }
i2pr-proto = { path = "../i2pr-proto" }
i2pr-transport = { path = "../i2pr-transport" }
siphasher.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
