[package]
name = "i2pr-interop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Non-production Plan 038 NTCP2 interoperability launcher seam"
publish = false

[dependencies]
clap.workspace = true
i2pr-crypto = { path = "../../crates/i2pr-crypto" }
i2pr-proto = { path = "../../crates/i2pr-proto" }
i2pr-runtime = { path = "../../crates/i2pr-runtime" }
i2pr-storage = { path = "../../crates/i2pr-storage" }
i2pr-transport = { path = "../../crates/i2pr-transport" }
i2pr-transport-ntcp2 = { path = "../../crates/i2pr-transport-ntcp2" }

[lints]
workspace = true
